fix embed spacing issues

--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -236,6 +236,12 @@ body .ast-archive-description .ast-archive-title {
   font-weight: var(--cp-font-weight--bold);
 }
 
+
+/* embed causing weird spacing issues */
+.wp-block-embed__wrapper:before {
+  position: absolute;
+}
+
 /*
 Gravity form modifications
 */
